@@ -1,3 +1,8 @@
+2003-08-24  Kevin Vandersloot
+
+	* drivemount.c: Properly scale custom pixmaps and don't unref the tooltips since
+	they don't need it. Patch from berbericfmiuni-passaude. Fixes bug #118675
+
 2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* drivemount.c, properties.c:  HIGify widget padding between the 
